# WiggleWatcher

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Design.org  README.md  TODO.md  guix.scm  notes.org
.github/workflows/: main.yml
app/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  centralwidget.cpp  centralwidget.h  centralwidget.ui  graphviewwidget.ui  logcontrolwidget.cpp  logcontrolwidget.h  logcontrolwidget.ui  maggieplot.cpp  maggieplot.h  maggieplotwidget.cpp  maggieplotwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manuals.qrc.in  state.cpp  state.h
core/: CMakeLists.txt  aps1540magnetometer.cpp  filetimer.cpp  global.cpp  iofactory.cpp  magnetometer.cpp  magnetometerlogger.cpp  sensorbase.cpp  sensorfactory.cpp  sensorfactory.h  sensorkind.cpp  sensorlogger.cpp  serialportfactory.cpp  serialportfactory.h  settings.cpp  tcpsocketfactory.cpp  tcpsocketfactory.h  textfilesink.cpp  udpsocketfactory.cpp  udpsocketfactory.h  vectormagnetometerdata.cpp
core/include/core/: aps1540magnetometer.h  filetimer.h  global.h  global.h.in  iofactory.h  magnetometer.h  magnetometerlogger.h  sensorbase.h  sensorfactory.h  sensorkind.h  sensorlogger.h  settings.h  textfilesink.h  vectormagnetometerdata.h
core/test/: CMakeLists.txt  tst_aps1540magnetometer.cpp  tst_sensorbase.cpp  tst_sensorkind.cpp  tst_serialportfactory.cpp  tst_settings.cpp  tst_tcpsocketfactory.cpp  tst_textfilesink.cpp  tst_udpsocketfactory.cpp
examples/: config.toml  maggui.conf
notes/: meeting-notes-2024-01-23.org  meeting-notes-2024-01-23.txt
src/: CMakeLists.txt  aps1540magnetometer.cpp  aps1540magnetometer.h  dslmagnetometersink.cpp  dslmagnetometersink.h  iofactory.cpp  iofactory.h  maggui-core_global.h  magnetometer.cpp  magnetometer.h  metadatainterface.h  qabstractsensor.hpp  sensorbase.cpp  sensorbase.h  sensorinterface.h  serialportfactory.cpp  serialportfactory.h  sinkinterface.h  tcpsocketfactory.cpp  tcpsocketfactory.h  textfilesink.cpp  textfilesink.h  udpsocketfactory.cpp  udpsocketfactory.h  vectormagnetometerdata.cpp  vectormagnetometerdata.h
src/test/: CMakeLists.txt  tst_aps1540magnetometer.cpp  tst_dslmagnetometersink.cpp  tst_sensorbase.cpp  tst_serialportfactory.cpp  tst_tcpsocketfactory.cpp  tst_udpsocketfactory.cpp
src/types/: vectormagnetometerdata.h
utils/: CMakeLists.txt  fake-sensor.cpp
